# stratagem-engine

./: Cargo.toml  readme.md  stratagems.toml
.github/workflows/: release.yml
src/: config_handler.rs  input_handler.rs  main.rs  stratagem_handler.rs
