[package]
name = "stratagem_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.53.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Foundation",
] }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["display"] }
serde_toml = "0.0.1"
enigo = "0.1.3"
chrono = "0.4.34"
log = "0.4.20"
simplelog = "0.12.1"
rand = "0.8.5"
